<resources>
    <string name="app_name">Awesome Chat</string>
    <string name="error_binding">Binding is not valid</string>
    <string name="error_something_wrong">Something wrong \ud83d\ude05</string>
    <string name="text_chat">Chat</string>
    <string name="text_friend">Friend</string>
    <string name="text_profile">Profile</string>
    <string name="text_start_with_awesome_chat">Start with Awesome chat</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_your_email">your email</string>
    <string name="text_password">Password</string>
    <string name="text_pass_hint">********</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_no_account">No account?</string>
    <string name="text_signup_now">     Signup now</string>
    <string name="text_register">Register</string>
    <string name="text_name">Full name</string>
    <string name="text_yourname_gmail_com">yourname@gmail.com</string>
    <string name="text_agree">I agree to the</string>
    <string name="text_policy">policies</string>
    <string name="and">and</string>
    <string name="text_term">terms</string>
    <string name="text_have_account">Already have an account?</string>
    <string name="text_register_now">Login now</string>
    <string name="success_register">Register successful</string>
    <string name="success_login">Login successful</string>
</resources>
