<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rikkei.awesomechat.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/text_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_30"
            android:fontFamily="@font/lato_bold"
            android:gravity="start"
            android:text="@string/text_register"
            android:textColor="#4356B4"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/text_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/image_back"
            app:layout_constraintTop_toBottomOf="@+id/image_back" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_name"
            android:textColor="#999999"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@id/edit_name"
            app:layout_constraintEnd_toEndOf="@id/text_register"
            app:layout_constraintStart_toStartOf="@id/image_back"
            app:layout_constraintTop_toBottomOf="@+id/text_register" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/text_name"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#676767"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/text_email"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:ignore="Autofill" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@drawable/ic_name"
            app:layout_constraintBottom_toBottomOf="@+id/edit_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/edit_name"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toTopOf="@id/edit_name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_email"
            android:textColor="#999999"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/edit_email"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/text_yourname_gmail_com"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#676767"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/text_password"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            tools:ignore="Autofill" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/ic_mail_login"
            app:layout_constraintBottom_toBottomOf="@+id/edit_email"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/edit_email"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_password"
            android:textColor="#999999"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/edit_password"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="#676767"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_password"
            tools:ignore="Autofill" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_password"
            app:layout_constraintBottom_toBottomOf="@+id/edit_password"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/edit_password"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@id/text_password"
            tools:ignore="ContentDescription" />

        <TableRow
            android:id="@+id/tr_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="@id/text_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@id/edit_password">

            <ImageView
                android:id="@+id/iv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_not_check"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/text_agree"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:fontFamily="@font/lato_bold"
                android:text="@string/text_policy"
                android:textColor="#4356B4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:fontFamily="@font/lato_regular"
                android:text="@string/and"
                android:textColor="#999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:fontFamily="@font/lato_bold"
                android:text="@string/text_term"
                android:textColor="#4356B4" />
        </TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:backgroundTint="@color/silver"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/text_register"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_20"
            app:layout_constraintBottom_toTopOf="@id/text_have_account"
            app:layout_constraintDimensionRatio="7:1"
            app:layout_constraintEnd_toEndOf="@id/text_register"
            app:layout_constraintStart_toStartOf="@id/text_register"
            app:layout_constraintTop_toBottomOf="@id/tr_agree" />


        <TextView
            android:id="@+id/text_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/text_have_account"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_login_now"
            app:layout_constraintStart_toStartOf="@id/text_register" />

        <TextView
            android:id="@+id/text_login_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:fontFamily="@font/lato_bold"
            android:gravity="start"
            android:text="@string/text_register_now"
            android:textColor="#4356B4"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/text_have_account"
            app:layout_constraintEnd_toEndOf="@id/text_register"
            app:layout_constraintStart_toEndOf="@id/text_have_account"
            app:layout_constraintTop_toTopOf="@id/text_have_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>